--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
                     <!--<li><a href="#intro">Home</a></li>-->
-                    <li><a href="#services-top">Product</a></li>
+                    <li><a href="#services">Product</a></li>
                     <!-- <li><a href="#works-top">Works</a></li>
                     <li><a href="#gallery-top">Administration</a></li> -->
                     <li><a href="#prices-top">Prices</a></li>
@@ -206,78 +206,38 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="divider"></div>
-    <div class="row divide">
-        <div class="span12">
-        </div>
-        <div class="span7">
-            <div id="carousel_fade_3" class="carousel slide carousel-fade">
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="img/analytics_1.gif" alt="">
-                    </div>
-                    <div class="inactive item">
-                        <img src="img/monarch.jpg" alt="">
-                    </div>
-                </div>
-                <button class="carousel-control left m-btn icn-only" href="#carousel_fade_3" data-slide="prev"><i class="fa fa-chevron-left"></i></button>
-                <button class="carousel-control right m-btn icn-only" href="#carousel_fade_3" data-slide="next"><i class="fa fa-chevron-right"></i></button>
-            </div>
-        </div>
-        <div class="span5 divide">
-            <h1>Analytics</h1>
-            <h4>Knowing your audience is the key to success</h4>
-            <p>With StreamKit you have complete insight into your viewers real-time engagement with information such as time spent on video, device type, and bandwidth used with all beautifully organized and displayed in a user friendly dashboard.</p>
-        </div>
-    </div>
-</section>
-
-<!--start gallery header-->
-<section id="gallery-top">
-    <!--start gallery-desktop header-->
-    <section id="gallery-top-desktop" class="visible-desktop" data-stellar-background-ratio="0.6"
-             data-stellar-vertical-offset="20">
-        <h1 class="header">Native Apps</h1>
-
-        <p class="header">Your own TV App and Mobile App</p>
-    </section>
-    <!--start gallery-mobile header-->
-    <section id="gallery-top-mobile" class="hidden-desktop">
-        <h1 class="header">Native Apps</h1>
-
-        <p class="header">Your own TV App and Mobile App</p>
-    </section>
-</section>
-<!--start gallery-->
-<!--start thumbnails section-->
-<section id="gallery">
-    <div class="container">
-
+        <div class="divider"></div>
         <div class="row divide">
-
+            <div class="span12">
+            </div>
             <div class="span7">
-                <div id="carousel_fade_4" class="carousel slide carousel-fade">
+                <div id="carousel_fade_3" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
-                        <div class="active item">
-                            <img src="img/works/admin_screenshot.jpg" alt="">
+                        <div class="item active">
+                            <img src="img/analytics_1.gif" alt="">
                         </div>
                         <div class="inactive item">
-                            <img src="img/works/stats_1.png" alt="">
+                            <img src="img/analytics_2.gif" alt="">
                         </div>
                     </div>
-                    <button class="carousel-control left m-btn icn-only" href="#carousel_fade_4" data-slide="prev"><i
-                            class="icon-chevron-left"></i></button>
-                    <button class="carousel-control right m-btn icn-only" href="#carousel_fade_4" data-slide="next"><i
-                            class="icon-chevron-right"></i></button>
+                    <button class="carousel-control left m-btn icn-only" href="#carousel_fade_3" data-slide="prev"><i class="fa fa-chevron-left"></i></button>
+                    <button class="carousel-control right m-btn icn-only" href="#carousel_fade_3" data-slide="next"><i class="fa fa-chevron-right"></i></button>
                 </div>
             </div>
             <div class="span5 divide">
-                <h1>Go beyond web streaming</h1>
-                <h4> keep your audience closer </h4>
-
-                <p>Based on an open source project, the administration panel can be easily extended with new features
-                    and plugins. </p>
+                <h1>Analytics</h1>
+                <h4>Knowing your audience is the key to success</h4>
+                <p>With StreamKit you have complete insight into your viewers real-time engagement with information such as time spent on video, device type, and bandwidth used with all beautifully organized and displayed in a user friendly dashboard.</p>
+            </div>
+        </div>
+        <div class="divider"></div>
+        <div class="row divide">
+            <div class="span8 offset2">
+                <img src="img/works/works_3.jpg" alt="Any device">
+                <h1>Any device. Anywhere.</h1>
+                <h4>One Stream. Multiple devices.</h4>
+                <p class="center">Spread it to the world in the most professional way. <br/>We have used the right technologies so you can reach viewers through any desktop browser, mobile phone or tablet.
+                </p>
             </div>
         </div>
     </div>
@@ -288,18 +248,13 @@
     <!--start prices-desktop header-->
     <section id="prices-top-desktop" class="visible-desktop" data-stellar-background-ratio="0.6"
              data-stellar-vertical-offset="20">
-        <h1 class="header">Prices</h1>
 
-        <p class="header">Unlimited streaming, unlimited performace</p>
-
-        <p class="header">Now with a 20% discount* </p>
     </section>
 
     <!--start prices-mobile header-->
     <section id="prices-top-mobile" class="hidden-desktop">
-        <h1 class="header">Prices</h1>
 
-        <p class="header">Unlimited streaming, unlimited performace</p>
+
     </section>
 </section>
 <!--start prices-->
@@ -308,8 +263,15 @@
 
 <div class="row divide" align="left">
 
+    <div class="span8 offset2">
+        <h1>Prices</h1>
+        <h4>Unlimited streaming, unlimited performance</h4>
+        <!--<p class="center">We provide spiritual, education, and sports organizations with a complete kit for streaming live and on-demand events.</p>-->
+    </div>
+
     <div class="promos">
         <div class="promo first">
+
             <h4>Web Anywhere</h4>
             <ul class="features">
                 <li class="brief">Any device.Anywhere.</li>
@@ -520,8 +482,7 @@
 <tr>
     <td>* The 25% discount is applicable only
         for the yearly subscriptions
-    </
-    >
+    <td/>
     <p> ** For the live recorded videos</p>
 
     <td align="center">
@@ -581,21 +542,21 @@
     <!--start contact-desktop header-->
     <section id="contact-top-desktop" class="visible-desktop" data-stellar-background-ratio="0.6"
              data-stellar-vertical-offset="20">
-        <h1 class="header">Contact</h1>
 
-        <p class="header">Price Inquiry</p>
     </section>
     <!--start contact-mobile header-->
     <section id="contact-top-mobile" class="hidden-desktop">
-        <h1 class="header">Contact</h1>
 
-        <p class="header">Price Inquiry</p>
     </section>
 </section>
 <!--start contact-->
 <section id="contact">
     <div class="container">
         <div class="row divide">
+            <div class="span8 offset2">
+                <h1>Contact</h1>
+                <!--<p class="center">We provide spiritual, education, and sports organizations with a complete kit for streaming live and on-demand events.</p>-->
+            </div>
             <div class="span8">
                 <div class="row">
                     <form action="js/sendmail.php" method="post" id="contactForm">
@@ -627,11 +588,11 @@
             </div>
             <!--start sidebar-->
             <div class="span4" id="address">
-                <p>US Sillicon Valley Office: </p> 
-                <p>(+1) 516-7STREAM</p>
+                <p>US Sillicon Valley Office: <br/>
+                    (+1) 516-7STREAM<br/><br/>
 
-                <p><abbr title="Phone">Europe Office:</abbr> </p> 
-                <p>(+43) 699-17067077
+                    Europe Office:<br/>
+                    (+43) 699-17067077
                 </p>
             </div>
         </div>
@@ -645,32 +606,29 @@
             <div class="span3">
                 <a href="#intro" class="brand"><img src="img/logo_sk_1.png" alt=""></a>
 
-                <p>2013 © streamkit.net</p><br>
+                <p>2013 &#169; StreamKit LLC</p><br>
                 <br>
             </div>
             <!--footer menu-->
             <div class="span2 offset6">
                 <ul>
                     <li><h5>Menu</h5></li>
-                    <li><a href="#intro">Home</a></li>
-                    <li><a href="#services-top">Services</a></li>
-                    <li><a href="#works-top">Works</a></li>
-                    <li><a href="#gallery-top">Administration</a></li>
+                    <li><a href="#services">Product</a></li>
                     <li><a href="#prices-top">Prices</a></li>
                 </ul>
             </div>
             <!--link to social networks-->
-            <!--
-                            <div class="span2 offset1">
-                                <ul>
-                                    <li><h5>Social</h5></li>
-                                    <li><a class="facebook" href="http://www.facebook.com/awerest" target="_blank">Facebook</a></li>
-                                    <li><a class="twitter" href="http://www.twitter.com/awerest" target="_blank">Twitter</a></li>
-                                    <li><a class="google" href="https://plus.google.com/u/0/104533843132286032110/posts" target="_blank">Google+</a></li>
-                                    <li></li>
-                                </ul>
-                            </div>
-                            -->
+
+            <div class="span2 offset1">
+                <ul>
+                    <li><h5>Social</h5></li>
+                    <li><a class="facebook" href="http://www.facebook.com/awerest" target="_blank">Facebook</a></li>
+                    <li><a class="twitter" href="http://www.twitter.com/awerest" target="_blank">Twitter</a></li>
+                    <li><a class="google" href="https://plus.google.com/u/0/104533843132286032110/posts" target="_blank">Google+</a></li>
+                    <li></li>
+                </ul>
+            </div>
+
         </div>
     </div>
 </section>
