--- a/index.html
+++ b/index.html
@@ -310,8 +310,9 @@
                             <button>Sign up</button>
                         </li>
                     </ul>
+            
                 </div>
-                <div class="promo second">
+                <div class="promo forth">
                     <h4>Professional</h4>
                     <ul class="features">
                         <li class="brief">TV Channel, 24/7 Streaming</li>
@@ -357,14 +358,14 @@
 
         <div class="row divide" align="left">
 
-            <table with="95%" cellpadding="5" cellspacing="2" class="prices">
+            <table with="95%" cellpadding="5" cellspacing="2" class="rwd-table">
                 <tr>
-                    <th width="40%" height="44" scope="col" bgcolor="#5D82B9">&nbsp;</th>
-                    <th width="20%" scope="col" bgcolor="#5D82B9"><span style="color:#FFF">Basic <br/> 39 $/mo</span>
+                    <th width="40%" height="44" scope="col" >&nbsp;</th>
+                    <th width="20%" scope="col" ><span >Web Anywhere <br/> 39 $/mo</span>
                     </th>
-                    <th width="20%" scope="col" bgcolor="#5D82B9"><span style="color:#FFF">Standard <br/> 99 $/mo</span>
+                    <th width="20%" scope="col" ><span >Standard <br/> 99 $/mo</span>
                     </th>
-                    <th width="20%" scope="col" bgcolor="#5D82B9"><span style="color:#FFF">Advanced <br/> 199$/mo</span>
+                    <th width="20%" scope="col" ><span >TV Plus <br/> 199$/mo</span>
                     </th>
                 </tr>
                 <tr>
@@ -514,9 +515,9 @@
                 <tr>
                     <td>* The 25% discount is applicable only
                         for the yearly subscriptions
-                    <td/>
-                    <p> ** For the live recorded videos</p>
-
+                        <p> ** For the live recorded videos</p>
+                    </td>
+                    
                     <td align="center">
                         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                             <input type="hidden" name="cmd" value="_s-xclick">
