# updated the video on the main page to a smaller size ( 30MB to 3 MB )

--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
 <header class="splash-entrance">
 
     <video muted id="video" class="banner-video" preload="auto" loop="loop" autoplay="">
-        <source src="http://d2gxmeol3x626n.cloudfront.net/storage/intro.mp4" type="video/mp4">
+<!--
+        <source src="http://10.0.0.6:1935/vod/mp4:intro.mp4/playlist.m3u8" type="audio/mp4; codecs=mp4a.40.2">
+        <source src="rtsp://10.0.0.6:1935/vod/intro.mp4" type="video/mp4">
+-->
+        <source src="http://s3.eu-central-1.amazonaws.com/streamkit-net/videos/intro2.mp4" type="video/mp4">
     </video>
 
     <div class="splash-content">
