# home page text updates

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                 <h4>One stream for multiple resolutions</h4>
 
                 <p>With StreamKit Cloud, you can easily broadcast from many locations. You don't need a high-end wired
-                    connection to stream and can use your 3G/4G cellular modem connection. <br/><br/>
-                    Our technology allow you to send one HD quality and have the StreamKit Cloud adjust the quality to
+                    connection to stream and you can use your 3G/4G cellular modem connection. <br/><br/>
+                    Our technology allows you to send one HD quality and have the StreamKit Cloud adjust the quality automatically to
                     lower resolutions so that your viewers have the best adapting streaming experience.<br/>
                     StreamKit Cloud is compatible with common industry's hardware and software encoders including
                     Teradek Vidiu, Digital Rapids ( Imagine Communications ), Wirecast, FMLE and others.
@@ -643,10 +643,11 @@
 
             <div class="span4" id="address">
                 <p>&nbsp;</p>
-                <p>US Sillicon Valley Office: <br/>
+                <p>Offices:</p>
+                <p>Sillicon Valley, California, United States: <br/>
                     (+1) 516-7STREAM<br/><br/>
 
-                    Europe Office:<br/>
+                    Vienna, Austria:<br/>
                     (+43) 699-17067077
                 </p>
             </div>
